--- a/style.css
+++ b/style.css
@@ -79,12 +79,37 @@ a {
     border-radius: 40%;
 }
 
-h2 {
+h2,
+.googleContainer {
     width: 70%;
     margin-inline: auto;
     color: var(--white);
     font-size: 2.4rem;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+}
+
+.googleContainer {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+}
+
+input {
+    background-color: #242424;
+    border-radius: 20px;
+    width: 60%;
+    height: 35px;
+    border: 3px outset #272727;
+    padding: 0 20px;
+    font-size: 1.7rem;
+    color: var(--white);
+}
+
+input:focus {
+    outline: none;
 }
 
 .links {
